--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 全局 API 地址
 # VITE_GLOBAL_API="http://localhost:6688"
-VITE_GLOBAL_API="http://api-hot.2w.pw"
+VITE_GLOBAL_API="https://api-hot.2w.pw"
 
 # ICP 备案号
 VITE_ICP = ""
