--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dailyhot",
   "description": "今日热榜",
-  "author": "imsyy",
-  "github": "https://github.com/imsyy",
+  "author": "290008282",
+  "github": "https://github.com/290008282",
   "version": "0.2.1",
   "private": true,
   "scripts": {
