--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dailyhot",
   "description": "今日热榜",
-  "author": "290008282",
+  "author": "易捷网络科技",
   "github": "https://github.com/290008282",
   "version": "0.2.1",
   "private": true,
